[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cache-associativity-benchmark"
version = "0.1.0"
dependencies = [
    "numpy>=1.20.0",
]
requires-python = ">=3.8"

[tool.uv]
# Optional: uv specific configurations can go here
# For example, to specify a Python version for uv to use:
# python = "3.10"
